test/lexerTest/fail/test7.ic
"How About -> this String""
() Are you even reading this []
//Hello//How are you?
/* Can you find me, I am lost?.? /*/
